@@ -5,15 +5,16 @@ import com.project.healthy_life_was.healthy_life.dto.ResponseDto;
 import com.project.healthy_life_was.healthy_life.dto.product.response.ProductDetailResponseDto;
 import com.project.healthy_life_was.healthy_life.dto.product.response.ProductListResponseDto;
 import com.project.healthy_life_was.healthy_life.entity.product.Product;
-import com.project.healthy_life_was.healthy_life.entity.product.ProductCategoryDetail;
-import com.project.healthy_life_was.healthy_life.repository.ProductCategoryDetailRepository;
 import com.project.healthy_life_was.healthy_life.repository.ProductRepository;
 import com.project.healthy_life_was.healthy_life.repository.ReviewRepository;
+import com.project.healthy_life_was.healthy_life.repository.UserPhysiqueTagRepository;
 import com.project.healthy_life_was.healthy_life.service.ProductService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
@@ -22,20 +23,31 @@ import java.util.stream.Collectors;
 public class ProductServiceImplement implements ProductService {
     public final ProductRepository productRepository;
     public final ReviewRepository reviewRepository;
-    public final ProductCategoryDetailRepository productCategoryDetailRepository;
+    private final UserPhysiqueTagRepository userPhysiqueTagRepository;
+
+    private Map<Long, Double> ratingMap() {
+        return reviewRepository.findAllAverageRatings()
+                .stream()
+                .collect(Collectors.toMap(
+                        row -> (Long) row[0],
+                        row -> (Double) row[1]
+                ));
+    }
 
     @Override
     public ResponseDto<List<ProductListResponseDto>> getAllProduct() {
         List<ProductListResponseDto> data = null;
         try {
             List<Product> products = productRepository.findAll();
+
             data = products.stream()
-                    .map(product -> {
-                        ProductCategoryDetail productCategoryDetail = productCategoryDetailRepository.findByPId(product.getPId());
-                        double averageRating = reviewRepository.findAverageRatingByProductId(product.getPId());
-                        return new ProductListResponseDto(product, averageRating, productCategoryDetail);
-                    })
-                    .collect(Collectors.toList());
+                    .map(product -> new ProductListResponseDto(
+                            product,
+                            ratingMap().getOrDefault(product.getPId(), 0.0),
+                            product.getProductCategoryDetail()
+                    ))
+                    .toList();
+
         } catch (Exception e) {
             e.printStackTrace();
             return ResponseDto.setFailed(ResponseMessage.DATABASE_ERROR);
@@ -68,12 +80,12 @@ public class ProductServiceImplement implements ProductService {
             List<Product> productList = productRepository.findByPCategoryName(pCategoryName);
 
             data = productList.stream()
-                    .map(product -> {
-                        ProductCategoryDetail productCategoryDetail = productCategoryDetailRepository.findByPId(product.getPId());
-                        double averageRating = reviewRepository.findAverageRatingByProductId(product.getPId());
-                        return new ProductListResponseDto(product, averageRating, productCategoryDetail);
-                    })
-                    .collect(Collectors.toList());
+                    .map(product -> new ProductListResponseDto(
+                            product,
+                            ratingMap().getOrDefault(product.getPId(), 0.0),
+                            product.getProductCategoryDetail()
+                    ))
+                    .toList();
 
         } catch (Exception e) {
             e.printStackTrace();
@@ -87,13 +99,14 @@ public class ProductServiceImplement implements ProductService {
         List<ProductListResponseDto> data = null;
         try {
             List<Product> productList = productRepository.findByPCategoryNameAndPCategoryDetailsName(pCategoryName, pCategoryDetailName);
+
             data = productList.stream()
-                    .map(product -> {
-                        ProductCategoryDetail productCategoryDetail = productCategoryDetailRepository.findByPId(product.getPId());
-                        double averageRating = reviewRepository.findAverageRatingByProductId(product.getPId());
-                        return new ProductListResponseDto(product, averageRating, productCategoryDetail);
-                    })
-                    .collect(Collectors.toList());
+                    .map(product -> new ProductListResponseDto(
+                            product,
+                            ratingMap().getOrDefault(product.getPId(), 0.0),
+                            product.getProductCategoryDetail()
+                    ))
+                    .toList();
         } catch (Exception e) {
             e.printStackTrace();
             return ResponseDto.setFailed(ResponseMessage.DATABASE_ERROR);
@@ -107,13 +120,14 @@ public class ProductServiceImplement implements ProductService {
 
         try {
             List<Product> productList = productRepository.findByPName(pName);
+
             data = productList.stream()
-                    .map(product -> {
-                        ProductCategoryDetail productCategoryDetail = productCategoryDetailRepository.findByPId(product.getPId());
-                        double averageRating = reviewRepository.findAverageRatingByProductId(product.getPId());
-                        return new ProductListResponseDto(product, averageRating, productCategoryDetail);
-                    })
-                    .collect(Collectors.toList());
+                    .map(product -> new ProductListResponseDto(
+                            product,
+                            ratingMap().getOrDefault(product.getPId(), 0.0),
+                            product.getProductCategoryDetail()
+                    ))
+                    .toList();
         } catch (Exception e) {
             e.printStackTrace();
             return ResponseDto.setFailed(ResponseMessage.DATABASE_ERROR);
@@ -126,17 +140,22 @@ public class ProductServiceImplement implements ProductService {
         List<ProductListResponseDto> data = null;
 
         try {
-            System.out.println(username);
-            List<Product> productList = productRepository.findByUsername(username);
-            System.out.println(username);
+            List<Long> userPhysiqueTagIds = userPhysiqueTagRepository.findByUserName(username);
+
+            List<Product> productList =
+                    productRepository.findProductsByTagTypes(userPhysiqueTagIds);
+
+            if (productList.isEmpty()) {
+                return ResponseDto.setSuccess(ResponseMessage.SUCCESS, new ArrayList<>());
+            }
+
             data = productList.stream()
-                    .map(product -> {
-                        ProductCategoryDetail productCategoryDetail = productCategoryDetailRepository.findByPId(product.getPId());
-                        double averageRating = reviewRepository.findAverageRatingByProductId(product.getPId());
-                        return new ProductListResponseDto(product, averageRating, productCategoryDetail);
-                    })
-                    .collect(Collectors.toList());
-            System.out.println(data);
+                    .map(product -> new ProductListResponseDto(
+                            product,
+                            ratingMap().getOrDefault(product.getPId(), 0.0),
+                            product.getProductCategoryDetail()
+                    ))
+                    .toList();
         } catch (Exception e) {
             e.printStackTrace();
             return ResponseDto.setFailed(ResponseMessage.DATABASE_ERROR);
